# Postgres-Reactive-SSE-Example

./: Dockerfile  LICENSE  README.md  create_newsletter.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_main.py  update_newsletter.py
api/: auth.py  newsletters.py
database/: config.py  triggers.py
models/: auth.py  newsletter.py
static/: index.html  main.js  styles.css
static/css/: base.css  components.css  responsive.css  typography.css  utilities.css
static/js/: auth.js  events.js  newsletters.js  ui.js
